--- a/index.html
+++ b/index.html
@@ -1,11 +1,138 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
+
 <body>
-    
+
+    <iframe src="layouts/header.html" frameborder="0"></iframe>
+    <iframe src="pages/pag1.html" frameborder="0"></iframe>
+    <iframe src="pages/pag2.html" frameborder="0"></iframe>
+    <iframe src="pages/pag3.html" frameborder="0"></iframe>
+
+    <div>
+        <main>
+            <article>
+                <section id="fel">
+                    <img src="https://img.itdg.com.br/tdg/images/blog/uploads/2017/05/hamburguer-artesanal.jpg?w=1200" alt="_blank" height="256" width="300">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, culpa sequi quidem deleniti corrupti exercitationem magnam? Dolorum impedit officia deserunt! Numquam dolorem vero dolores ut facilis neque sit nemo aperiam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id optio vero dolore atque earum et sequi aspernatur iste, mollitia perferendis tempore. Excepturi, autem a. Temporibus voluptatum quaerat delectus odit provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur hic, mollitia ut at quidem praesentium nisi aperiam? Quis itaque recusandae quia quidem natus dolore excepturi nobis placeat delectus quaerat?</p>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <h1>
+                        combo 1
+                    </h1>
+                    <img src="https://s2.glbimg.com/GRF9KCq-1hiz5uSs-xX9Go_KqIc=/0x0:2048x1365/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_d72fd4bf0af74c0c89d27a5a226dbbf8/internal_photos/bs/2022/p/X/eb4KQdToys327cGqnRGg/receita-ceboloni-bacon.jpg" alt="_blank" height="150px" width="190px">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus est repudiandae sint porro
+                        molestias reprehenderit praesentium provident ad molestiae. Eveniet natus possimus amet aliquam
+                        in, quae dignissimos minus beatae consequuntur!
+                    </p>
+                </section>
+
+                <section>
+                    <h1>
+                        combo 2
+                    </h1>
+                    <img src="https://img.itdg.com.br/tdg/images/blog/uploads/2017/07/shutterstock_337714676.jpg?w=1200" alt="_blank" height="150px" width="190px">
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore adipisci voluptatum tempore
+                        soluta sequi molestias harum dolor rerum repudiandae quam, quidem expedita in maxime, esse,
+                        doloribus nesciunt fugit ullam repellat?
+                    </p>
+                </section>
+
+                <section>
+                    <h1>combo 3</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam illo, ut fuga voluptatum
+                        dolor reprehenderit, facilis dolorum quibusdam impedit cum odio corrupti autem, error cupiditate
+                        praesentium rem qui repellendus?
+                    </p>
+                </section>
+
+
+            </article>
+          
+            <article>
+                <section>
+                    <h1>
+                        combo 4
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus est repudiandae sint porro
+                        molestias reprehenderit praesentium provident ad molestiae. Eveniet natus possimus amet aliquam
+                        in, quae dignissimos minus beatae consequuntur!
+                    </p>
+                </section>
+
+                <section>
+                    <h1>
+                        combo 5
+                    </h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore adipisci voluptatum tempore
+                        soluta sequi molestias harum dolor rerum repudiandae quam, quidem expedita in maxime, esse,
+                        doloribus nesciunt fugit ullam repellat?
+                    </p>
+                </section>
+
+                <section>
+                    <h1>combo 6</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam illo, ut fuga voluptatum
+                        dolor reprehenderit, facilis dolorum quibusdam impedit cum odio corrupti autem, error cupiditate
+                        praesentium rem qui repellendus?
+                    </p>
+                </section>
+
+
+            </article>
+
+            <article>
+                <section>
+                    <h1>
+                        combo 7
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus est repudiandae sint porro
+                        molestias reprehenderit praesentium provident ad molestiae. Eveniet natus possimus amet aliquam
+                        in, quae dignissimos minus beatae consequuntur!
+                    </p>
+                </section>
+
+                <section>
+                    <h1>
+                        combo 8 
+                    </h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore adipisci voluptatum tempore
+                        soluta sequi molestias harum dolor rerum repudiandae quam, quidem expedita in maxime, esse,
+                        doloribus nesciunt fugit ullam repellat?
+                    </p>
+                </section>
+
+                <section>
+                    <h1>combo 9 </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam illo, ut fuga voluptatum
+                        dolor reprehenderit, facilis dolorum quibusdam impedit cum odio corrupti autem, error cupiditate
+                        praesentium rem qui repellendus?
+                    </p>
+                </section>
+
+
+            </article>
+        </main>
+    </div>
+
+    <iframe src="layouts/footer.html" frameborder="0"></iframe>
+    </head>
+
 </body>
+
 </html>
