--- a/pages/pag3.html
+++ b/pages/pag3.html
@@ -10,7 +10,7 @@
     <p>Entre em contato</p>
 </div>
 <div id="div1">
-    <form action="https://google.com">
+    <form action="./../pages/pag4.html">
 
     <label for="">Nome:</label>
          <input id="border" type="text" placeholder="Digite seu nome" required>
