--- a/pages/pag1.html
+++ b/pages/pag1.html
@@ -10,8 +10,12 @@
     <iframe src="../layouts/header.html" frameborder="0" width="100%"></iframe>
     <div>
         <main>
+            <h1>
+                Sobre nós:
+            </h1>
 
             <article>
+
                 <section id="arc1">
                     <img src="https://media-cdn.tripadvisor.com/media/photo-s/23/55/37/3c/entrada.jpg" alt=""
                         width="550px" height="440px">
@@ -26,6 +30,9 @@
                         dignissimos facilis harum velit cupiditate eos, asperiores obcaecati!</p>
                 </section>
             </article>
+            <h1>
+                Conheça nossa equipe:
+            </h1>
             <article>
                 <section>
                     <h1>
