alterei target parent

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 <body>
 
     <iframe src="layouts/header.html" frameborder="0" width="100%" scrolling="no"></iframe>
-    <iframe src="pages/pag1.html" frameborder="0"></iframe>
-    <iframe src="pages/pag2.html" frameborder="0"></iframe>
-    <iframe src="pages/pag3.html" frameborder="0"></iframe>
 
     <div>
         <h1 id="kk">
@@ -142,11 +139,9 @@
         </main>
     </div>
 
-    <iframe src="layouts/footer.html" frameborder="0" scrolling="no"></iframe>
+    <iframe src="layouts/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
     </head>
 
 </body>
 
 </html>
-=======
->>>>>>> e2068b5996a51c976c522f1ce720c711d9c4260a
