--- a/pages/pag4.html
+++ b/pages/pag4.html
@@ -8,19 +8,20 @@
 </head>
 
 <body>
-    <iframe src="../layouts/footer.html" frameborder="0"></iframe>
-    <iframe src="../layouts/header.html" frameborder="0"></iframe>
+
+    <iframe src="../layouts/header.html" frameborder="0" width="100%"></iframe>
     <main>
         <article>
             <section>
                 <img src="../assets/imagens/correct.png" width="300" height="300">
                 <h1>Formulário enviado com sucesso!</h1>
             </section>
-            <form action="">
+            <form action="file:///C:/Users/Aluno%20A/Documents/Projetos/desafio/index.html">
                 <button id="botão">Voltar a home</button>
             </form>
         </article>
     </main>
+    <iframe src="../layouts/footer.html" frameborder="0" width="100%"></iframe>
 
 </body>
 
