--- a/pages/pag4.html
+++ b/pages/pag4.html
@@ -16,7 +16,7 @@
                 <img src="../assets/imagens/correct.png" width="300" height="300">
                 <h1>Formulário enviado com sucesso!</h1>
             </section>
-            <form action="file:///C:/Users/Aluno%20A/Documents/Projetos/desafio/index.html">
+            <form action="../index.html">
                 <button id="botão">Voltar a home</button>
             </form>
         </article>
