--- a/pages/pag1.html
+++ b/pages/pag1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="pag1.css">
+    <link rel="stylesheet" href="../assets/css/pag1.css">
 </head>
 
 <body>
