--- a/pages/pag3.html
+++ b/pages/pag3.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="pag3.css">
+    <link rel="stylesheet" href="../assets/css/pag3.css">
 </head>
 <body>
     <iframe src="../layouts/header.html" frameborder="0" width="100%"></iframe>
+
 <div>
     <p>Entre em contato</p>
 </div>
@@ -20,6 +21,7 @@
          <input id="border3" type="message" placeholder="Digite sua mensagem" required minlength="8">
          <input id="enviar" type="submit">
      </form>
-</div>
+    </div>
+    <iframe src="../layouts/footer.html" frameborder="0"  width="100%"></iframe>
 </body>
 </html>
