--- a/pages/pag4.html
+++ b/pages/pag4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="pag4.css">
+    <link rel="stylesheet" href="../assets/css/pag4.css">
 </head>
 
 <body>
