--- a/pages/pag4.html
+++ b/pages/pag4.html
@@ -12,7 +12,7 @@
     <iframe src="../layouts/header.html" frameborder="0" width="100%"></iframe>
     <main>
         <article>
-            <section>
+            <section id="um">
                 <img src="../assets/imagens/correct.png" width="220" height="220">
                 <h1>Formulário enviado com sucesso!</h1>
             </section>
