--- a/pages/pag1.html
+++ b/pages/pag1.html
@@ -14,6 +14,7 @@
                 Sobre nós:
             </h1>
 
+            
             <article>
 
                 <section id="arc1">
@@ -34,7 +35,7 @@
                 Conheça nossa equipe:
             </h1>
             <article>
-                <section>
+                <section id="card">
                     <h1>
                         Camila Bersan
                     </h1>
@@ -48,7 +49,7 @@
                     </p>
                 </section>
 
-                <section>
+                <section id="card">
                     <h1>
                         Felipe Pedro
                     </h1>
@@ -60,9 +61,9 @@
                         soluta sequi molestias harum dolor rerum repudiandae quam, quidem expedita in maxime, esse,
                         doloribus nesciunt fugit ullam repellat?
                     </p>
-                </section>
+                </section id="card">
 
-                <section>
+                <section id="card">
                     <h1>Julia Martins</h1>
                     <a href="https://instagram.com/juulia_martinsz"target="_blank">
                         <img src="../assets/imagens/img1.jfif">
@@ -77,12 +78,12 @@
 
             </article>
             <article>
-                <section>
+                <section id="card">
                     <h1>
                         Matheus Henrique
                     </h1>
                     <a href="https://instagram.com/fervalinhoss"target="_blank">
-                        <img src="../assets/imagens/im5.jfif">
+                        <img id="imgs" src="../assets/imagens/im5.jfif">
                     </a>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus a alias odio sapiente neque
@@ -91,7 +92,7 @@
                     </p>
                 </section>
 
-                <section>
+                <section id="card">
                     <h1>Samuel pinheiro</h1>
                     <a href="https://instagram.com/samuel_pinheiro24"target="_blank">
                         <img src="../assets/imagens/img4.jfif">
@@ -110,7 +111,7 @@
                     <h1>gerente</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugiat corporis culpa impedit
                     cupiditate laboriosam vitae eius, atque tempore, deserunt expedita. Incidunt minima praesentium
-                    repellat facere aliquid sapiente provident quo.
+                    repellat facere aliquid sapiente provident quo.sa
                     </p>
                 </section>
             </article>
