tamanho do font-size

--- a/pages/pag3.html
+++ b/pages/pag3.html
@@ -8,7 +8,7 @@
     <iframe src="../layouts/header.html" frameborder="0" width="100%"></iframe>
 
 <div>
-    <p>Entre em contato</p>
+    <h1>Entre em contato</h1>
 </div>
 <div id="div1">
     <form action="./pag4.html">
