--- a/pages/pag1.html
+++ b/pages/pag1.html
@@ -10,7 +10,8 @@
     <iframe src="../layouts/header.html" frameborder="0" width="100%"></iframe>
     <div>
         <main>
-            <h1>
+            <img id="banner" src="https://media-cdn.tripadvisor.com/media/photo-s/17/b8/75/6a/fachada-do-la-rustico.jpg"  alt="">       
+             <h1>
                 Sobre nós:
             </h1>
 
@@ -59,7 +60,7 @@
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore adipisci voluptatum tempore
                         soluta sequi molestias harum dolor rerum repudiandae quam, quidem expedita in maxime, esse,
-                        doloribus nesciunt fugit ullam repellat?
+                        doloribus nesciunt fugit ullam repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, molestias maxime. Sapiente beatae numquam maiores magni ipsa, quod quisquam aperiam similique quibusdam et, fugiat autem? Repellendus totam necessitatibus optio aliquid?
                     </p>
                 </section id="card">
 
@@ -71,7 +72,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam illo, ut fuga voluptatum
                         dolor reprehenderit, facilis dolorum quibusdam impedit cum odio corrupti autem, error cupiditate
-                        praesentium rem qui repellendus?
+                        praesentium rem qui repellendus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore perferendis et rem dolorum at nesciunt quia pariatur maxime repellat, alias itaque fugit voluptas fuga quisquam, nemo asperiores deserunt, harum odit!
                     </p>
                 </section>
 
@@ -82,13 +83,13 @@
                     <h1>
                         Matheus Henrique
                     </h1>
-                    <a href="https://instagram.com/fervalinhoss"target="_blank">
+                    <a  href="https://instagram.com/fervalinhoss"target="_blank">
                         <img id="imgs" src="../assets/imagens/im5.jfif">
                     </a>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus a alias odio sapiente neque
                         ullam. Voluptatem minus, veniam optio architecto, accusamus ipsum blanditiis similique fugiat,
-                        distinctio quibusdam ipsa aliquam facere.
+                        distinctio quibusdam ipsa aliquam facere. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium neque hic asperiores quisquam cupiditate voluptas laborum sequi nam labore excepturi, eum a enim maiores. Beatae distinctio temporibus quisquam qui aliquid?
                     </p>
                 </section>
 
@@ -102,16 +103,16 @@
                         maiores.
                         Modi velit libero ad nostrum, ducimus nobis mollitia, culpa, temporibus asperiores provident
                         iste
-                        reprehenderit repellat expedita!
+                        reprehenderit repellat expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos iure repellendus mollitia quidem et obcaecati id impedit soluta qui ratione hic unde odio vitae minus quisquam optio totam, ipsam autem!
                     </p>
                 </section>
 
-                <section>
+                <section id="card">
                     <p>
                     <h1>gerente</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugiat corporis culpa impedit
                     cupiditate laboriosam vitae eius, atque tempore, deserunt expedita. Incidunt minima praesentium
-                    repellat facere aliquid sapiente provident quo.sa
+                    repellat facere aliquid sapiente provident quo.sa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati dicta harum distinctio doloremque nulla quam quae adipisci quis unde totam optio at voluptatibus quisquam incidunt repellat, a voluptates beatae explicabo.
                     </p>
                 </section>
             </article>
