coloquei letra maiuscula no título

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div>
         <h1 id="kk">
-            tech burguer
+            Tech Burguer
           </h1>
         <main>
             <h4 id="ooo">o melhor fast food do mundo</h4>
