adicionei uma frase de agradecimento

--- a/pages/pag4.html
+++ b/pages/pag4.html
@@ -15,6 +15,7 @@
             <section id="um">
                 <img src="../assets/imagens/correct.png" width="220" height="220">
                 <h1>Formulário enviado com sucesso!</h1>
+                <p>Equipe Tech Burguer agradece a sua colaboração!!</p>
             </section>
             <form action="../index.html">
                 <button id="botão">Voltar a home</button>
