--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Tech Burguer
           </h1>
         <main>
-            <h4 id="ooo">o melhor fast food do mundo</h4>
+            <h4 id="ooo">O melhor fast food do mundo</h4>
             <article>
                 <section id="fel">
                     <img id="imgg"  src="https://img.itdg.com.br/tdg/images/blog/uploads/2017/05/hamburguer-artesanal.jpg?w=1200" alt="_blank" height="256" width="300" >
